iOS 사파리 fixed 버그 근본 수정: body의 overflow-x 제거 (컴포넌트가 자체 클리핑), 캐시 v=6

--- a/css/final.css
+++ b/css/final.css
@@ -49,7 +49,6 @@ body {
   line-height: 1.7;
   max-width: 480px;
   margin: 0 auto;
-  overflow-x: clip;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
